Update to make things work on not just the server.
Signed-off-by: Neo Melonas <neo@neomelonas.com>

--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,9 @@
 RewriteEngine On
 # For the Mini News Feed Digest
-RewriteCond %{REQUEST_URI} ^/mini/? [NC]
-RewriteRule ^/mini/([^/d]+)/?$ /?type=$1 [L]
+RewriteBase /NewsDigest
+
+RewriteRule ^mini/$ mini.php [L]
+RewriteRule ^mini/([^/d]+)/?$ mini.php?type=$1 [L]
 
 # For the normal News Feed Digest
-RewriteCond %{REQUEST_URI} ^/? [NC]
-RewriteRule ^([^/.]+)/?$ /?type=$1 [L]
+RewriteRule ^([^/.]+)/?$ index.php?type=$1 [L]
